# auto-launcher

./: Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.js  ci-linux.sh
src/: lib.rs  linux.rs  macos.rs  windows.rs
tests/: test.rs
